--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.0",
     "bootstrap": "^5.0.0-beta3",
     "draft-js": "^0.11.7",
+    "draft-js-import-html": "^1.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
