--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "bootstrap": "^5.0.0-beta3",
+    "bootstrap-icons": "^1.4.1",
     "draft-js": "^0.11.7",
     "draft-js-import-html": "^1.4.1",
     "react": "^17.0.2",
