--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://linhatran.github.io/rich-text-editor/",
   "name": "rich-text-editor",
   "version": "0.1.0",
   "private": true,
@@ -14,7 +15,6 @@
     "bootstrap": "^5.0.0-beta3",
     "bootstrap-icons": "^1.4.1",
     "draft-js": "^0.11.7",
-    "draft-js-import-html": "^1.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -22,6 +22,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -44,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
