--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "draft-convert": "^2.1.10",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "firebase": "^8.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.6",
