--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "draftjs-to-html": "^0.9.1",
     "firebase": "^8.4.1",
     "react": "^17.0.2",
+    "react-delay": "^0.1.0",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.6",
     "react-redux": "^7.2.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "typescript": "^4.1.2",
@@ -52,6 +54,7 @@
     ]
   },
   "devDependencies": {
-    "@types/draftjs-to-html": "^0.8.0"
+    "@types/draftjs-to-html": "^0.8.0",
+    "@types/react-router-dom": "^5.1.7"
   }
 }
